# rust-java-demo

./: .gitignore  README.md  pom.xml
.github/workflows/: ci.yaml  release.yaml
core/: pom.xml
core/src/main/java/io/greptime/demo/: RustJavaDemo.java
core/src/main/java/io/greptime/demo/utils/: AsyncRegistry.java  Logger.java
core/src/main/resources/: log4j2.xml
core/src/main/rust/demo/: Cargo.toml
core/src/main/rust/demo/.cargo/: config.toml
core/src/main/rust/demo/src/: error.rs  lib.rs  method_invoker.rs
core/src/main/rust/demo/src/method_invoker/: test.rs
example/: pom.xml
example/src/main/java/: RustJavaDemoExample.java
example/src/main/resources/: log4j2.xml
